log
Fri 12 May 2023 12:35:09 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
f436564
Fri 12 May 2023 12:35:27 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e80fb97
Fri 12 May 2023 12:39:03 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
86c68fb
Fri 12 May 2023 12:39:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:42:10: error: incompatible types when returning type ‘Heap’ {aka ‘struct Heap’} but ‘Heap *’ {aka ‘struct Heap *’} was expected
   42 |   return *heap;
      |          ^~~~~
heap.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
caeaf98
Fri 12 May 2023 12:39:23 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0aec151
